[gd_scene load_steps=8 format=3 uid="uid://cg6gnjj6opuhq"]

[ext_resource type="Script" path="res://Assets/Utility/DropItems/PickUp/pickup_component.gd" id="1_xt2h3"]
[ext_resource type="Script" path="res://Assets/Player/Stats/stat.gd" id="2_0rmmo"]
[ext_resource type="Script" path="res://Assets/Player/Stats/stat_set.gd" id="3_qnqu1"]

[sub_resource type="Resource" id="Resource_w6quh"]
script = ExtResource("2_0rmmo")
type = 305
flat = 10.0
increased = 0.0
more = 0.0

[sub_resource type="Resource" id="Resource_xbb7f"]
script = ExtResource("3_qnqu1")
data = Array[ExtResource("2_0rmmo")]([SubResource("Resource_w6quh")])

[sub_resource type="CircleShape2D" id="CircleShape2D_7ar3r"]
radius = 53.0

[sub_resource type="CircleShape2D" id="CircleShape2D_3hhm4"]
radius = 11.0

[node name="PickupComponent" type="Node2D"]
script = ExtResource("1_xt2h3")
stat_set = SubResource("Resource_xbb7f")

[node name="pickupRadius" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="pickupRadius"]
shape = SubResource("CircleShape2D_7ar3r")

[node name="reactionRadius" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="reactionRadius"]
shape = SubResource("CircleShape2D_3hhm4")

[connection signal="area_entered" from="pickupRadius" to="." method="_on_pickup_radius_area_entered"]
[connection signal="area_entered" from="reactionRadius" to="." method="_on_reaction_radius_area_entered"]
